--- a/assets/translations/tr.json
+++ b/assets/translations/tr.json
@@ -105,14 +105,71 @@
   "topbar_logout_confirmation_title": "Çıkış Onayı",
   "topbar_logout_confirmation_message": "Çıkış yapmak istediğinizden emin misiniz?",
   "topbar_cancel": "İptal",
+   "employee_add_title":        "Yeni Çalışan",
+ "employee_add_subtitle":     "Yeni çalışan bilgilerini ekleyin",
+ "employee_personal_info":    "Kişisel Bilgiler",
+ "employee_name_label":       "Ad Soyad",
+ "employee_name_hint":        "Çalışanın tam adı",
+ "employee_email_label":      "E-posta",
+ "employee_email_hint":       "ornek@sirket.com",
+ "employee_phone_label":      "Telefon",
+ "employee_phone_hint":       "0555 123 4567",
+ "employee_job_info":         "İş Bilgileri",
+ "employee_status_label":     "Durum",
+ "employee_status_hint":      "Aktif / Pasif",
+ "employee_save":             "Kaydet",
+ "employee_save_changes":     "Değişiklikleri Kaydet",
+ "employee_list_title":       "Çalışan Listesi",
+ "employee_list_subtitle":    "Tüm çalışanlarınızı yönetin",
+ "import":                    "İçe Aktar",
+ "export":                    "Dışa Aktar",
+ "add_new_employee":          "Yeni Çalışan",
+ "Kaydet": "Kaydet",
+ "employee_name_required": "Ad soyad gereklidir",
+ "dash":"Boş",
+ "full_name":                 "Ad Soyad",
+ "email":                     "E-posta",
+ "phone":                     "Telefon",
+ "status":                    "Durum",
+ "active":                    "Aktif",
+ "edit":                      "Düzenle",
+ "delete":                    "Sil",
+ "import_list_title":                   "Çalışanları İçe Aktar",
+ "import_list_subtitle":                "Excel (.xlsx) dosyanızı yükleyin",
+ "import_list_template_download":       "Şablon İndir",
+ "import_list_template_desc":           "Doğru format için şablon dosyasını kullanın",
+ "import_list_template_download_btn":   "Şablonu İndir",
+ "import_list_upload_title":            "Dosya Yükle",
+ "import_list_upload_desc":             "Excel dosyanızı seçin ve yükleyin",
+ "import_list_upload_btn":              "Dosya Seç",
+ "import_list_note":                    "Not: İşlem birkaç dakika sürebilir.",
+ "import_list_header_name":             "Ad Soyad",
+ "import_list_header_position":         "Pozisyon",
+ "import_list_header_department":       "Departman",
+ "import_list_header_status":           "Durum",
+ "import_list_header_email":            "E-posta",
+ "import_list_header_phone":            "Telefon",
+ "import_list_example_name":            "Örnek İsim",
+ "import_list_example_position":        "Örnek Pozisyon",
+ "import_list_example_department":      "Örnek Departman",
+ "import_list_example_status":          "Aktif",
+ "import_list_example_email":           "ornek@sirket.com",
+ "import_list_example_phone":           "0555 123 4567",
+ "import_list_status_active":           "Aktif",
+ "import_list_template_downloaded":     "Şablon indirildi",
+ "import_list_excel_processing":        "Excel işleniyor…",
+ "import_list_import_success":          "Çalışanlar başarıyla aktarıldı",
+ "import_list_export_success":          "Liste başarıyla dışa aktarıldı",
+ "İptal": "İptal",
   
   "sidemenu_main_functions": "Ana Fonksiyonlar",
   "sidemenu_home": "Ana Sayfa",
-  "sidemenu_contracts": "Sözleşmeler",
-  "sidemenu_list": "Liste",
-  "sidemenu_orgchart": "Organizasyon Şeması",
+  "sidemenu_contracts": "KM Kaydı",
+  "sidemenu_list": "Çalışan Bilgisi",
+  "sidemenu_orgchart": "Servis Kaydı",
   "sidemenu_analytics": "Analitik",
   "sidemenu_reports": "Raporlar",
+  "sidemenu_detail": "Araç Ekle",
   "sidemenu_performance": "Performans",
   "sidemenu_system": "Sistem",
   "sidemenu_settings": "Ayarlar",
